# tenantx

./: .gitignore  Cargo.toml  migration-script.sql
src/: main.rs
src/assets/: handlers.rs  mod.rs  model.rs  routes.rs  service.rs
src/shared/: response.rs
