[package]
name = "tenantx-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.0"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
hyper = { version = "1.5.2", features = ["full"] }
uuid = { version = "1.5.2", features = ["serde", "v4"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "postgres", "uuid", "macros"] }
dotenv = "0.15.0"
validator = { version = "0.16.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
